<resources>
    <string name="app_name">My Movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="title_label">Title:</string>
    <string name="original_title_label">Original title:</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release date:</string>
    <string name="description_label">Overview:</string>
    <string name="add_to_favorite">Added to favorites</string>
    <string name="remove_from_favorite">Removed from favorites</string>
    <string name="favorites">Favorites</string>
    <string name="main">Main</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="movie_logo">Movie logo</string>
    <string name="favs">Favorites</string>
    <string name="trailers_label">Трейлеры:</string>
</resources>